[gd_scene load_steps=6 format=3 uid="uid://barirsen8hv88"]

[ext_resource type="Script" uid="uid://bbxlalb4gttko" path="res://scripts/gassy_powerup.gd" id="1_2q2dr"]
[ext_resource type="Shader" uid="uid://djmpkab3opq5n" path="res://assets/shaders/outline.gdshader" id="2_e5f7b"]
[ext_resource type="Texture2D" uid="uid://c1nroaix4mry1" path="res://assets/images/gassy-powerup.png" id="3_2q2dr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_06668"]
shader = ExtResource("2_e5f7b")
shader_parameter/color = Color(1, 1, 1, 1)
shader_parameter/width = 10.0
shader_parameter/pattern = 0
shader_parameter/inside = false
shader_parameter/add_margins = true
shader_parameter/number_of_images = Vector2(1, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_qd1ss"]
radius = 67.1193

[node name="GassyPowerup" type="Node2D" node_paths=PackedStringArray("sprite")]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_2q2dr")
sprite = NodePath("Gassy")

[node name="Gassy" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_06668")
scale = Vector2(0.160793, 0.160793)
texture = ExtResource("3_2q2dr")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_qd1ss")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0.714289, -2.14286)
scale = Vector2(6.64286, 4.64286)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
